traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:20: error: not found: value x
  changercolonne(x);
                 ^