traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var count:Int=0;
  var y:Int=0;
  
  def ligne(y:Int){
    var x:Int=0
    while (x!=getWorldWidth){
      setPos(x,y);
      writeMessage(count);
      count+=1;
      x+=1;
    }
  }
  def changercolonne(x:Int){
    if(x==getWorldWidth){
      y+=1;
      setPos(x,y);
    }
  }
  ligne(y);
  changercolonne(x);
}